@@ -4,6 +4,8 @@
 
 Version 0.7.2
 -------------------------------------------------------------------------------
+
+- Fixed Joystick handling
 - Removed unused font outline.ttf from the distribution
 
 
